# tunnelgame

./: .gitignore  README.md  __init__.spec  addressing.py  config.py  gameloop.py  gameparser.py  grammar.yaml  interpreter.py  pyproject.toml  requirements.txt  view.py
docs/: bugs.txt  changelog  features.txt  logical_capabilities.txt  storytodo.txt  todo.txt
docs/new_syntax/: example_1.yaml  example_2.yaml
docs/storyplanning/: encounters.txt
engine/: __init__.py  __main__.py  addressing.py  config.py  gameloop.py  gameobject.py  gameparser.py  gamesession.py  gamestate.py  grammar.yaml  interpreter.py  server.py  utility.py  view.py
engine/templates/: index.html  index_05242025.html
organization/: bugs.txt  syntax.txt  todo.txt
saves/: autosave.pkl  h.pkl  hi  hi.pkl  hi2.pkl  mine_game_2_testing  test.yaml
src/: __main__.py  addressing.py  config.py  gameloop.py  gameparser.py  grammar.yaml  interpreter.py  ui.py  utility.py  view.py
src/tunnelvision/: __init__.py  (+10 more)
stories/: args_testing.yaml  complex_footer.yaml  complex_header.yaml  demo.yaml  exploration_basic.yaml  exploration_basic_2.yaml  goto_example.yaml  listeners.yaml  listeners_include.yaml  machine_plot.yaml  machine_plot_2.yaml  meta_story.yaml  mine_game_2.yaml  mom_example.yaml  mom_story.yaml  new_syntax_test.yaml  possible_new_syntax.yaml  print_var_text.yaml  simple_actions.yaml  small_story.yaml  spill.yaml  temp.yaml  testing.yaml  world_test.yaml
tests/: test_addressing.py  test_config.py  test_gameparser.py  test_gamestate.py  test_stories.py  test_utility.py  test_view.py
(+266 files in other folders)
